# log-cli

./: CLAUDE.md  README.md  pyproject.toml
agent/: IDENTITY.md  MEMORY.md.template  OVERVIEW.md  SOUL.md  TOOLS.md  USER.md
src/log/: __init__.py  cli.py  config.py  exporter.py  importer.py
src/log/commands/: __init__.py  add.py  data_import.py  delete.py  export.py  get.py  groups.py  init.py  ls.py  search.py  set_default.py  stats.py  tags.py
src/log/db/: __init__.py  connection.py  schema.py
